# hsig-picotls

./: CMakeLists.txt  run_hsbench.sh
app/: auth_bench.c  bench_common.c  bench_common.h  client.c  handshake_bench.c  oqs_util.c  server.c  test_picotls_api.c  test_picotls_api.h  test_x509_api.c  utilities.h
app/assets/dilithium2/: dilithium2_srv.key
app/assets/dilithium5/: generate_cert.sh
app/assets/oqs-ca/: dilithium3_CA.key
crypto/: blake3.c
include/: picotls.h
include/picotls/: cpu_cycle_logger.h  openssl.h  rdtsc.h
lib/: cpu_cycle_logger.c  hsig.c  hsig.h  openssl.c  picotls.c
lib/cifra/: haraka.c  haraka.h
oqs-cert/ca/: dilithium3_CA.crt  dilithium3_CA.srl
oqs-cert/dilithium2/: dilithium2_srv.crt  dilithium2_srv.csr
oqs-cert/dilithium3/: dilithium3_srv.crt  dilithium3_srv.csr  dilithium3_srv.key
oqs-cert/dilithium5/: dilithium5_srv.crt  dilithium5_srv.csr  dilithium5_srv.key
t/: cli.c  hsbench.c  openssl.c  picotls.c  util.h
test-oqsopenssl/: CMakeLists.txt  gen_certkey.c  load_oqsprovider.c  oqs_util.h  static_oqsprovider.c  test_x509_api.c
test/test-oqsopenssl/: dilithium_cert.pem  dilithium_key.pem  gen_certkey  gen_certkey.c  load_oqsprovider  load_oqsprovider.c  oqs_cert_sign.c  test_load  test_load.c
test/test-oqsopenssl/certs/: dilithium2_cert.pem  dilithium2_key.pem
